# Hackathon-phase_3

./: .gitignore  CLAUDE.md  DEPLOYMENT.md  README.md  VERCEL_DEPLOYMENT.md  docker-compose.yml
.claude/: BACKEND_SETUP.md  FRONTEND_SETUP.md  README.md
.claude/agents/: backend-developer.md  frontend-designer.md
.claude/skills/: FRONTEND_README.md  README.md  backend.api.md  backend.mcp.md  backend.migration.md  backend.model.md  backend.service.md  backend.test.md  frontend.api.md  frontend.component.md  frontend.hook.md  frontend.page.md  frontend.test.md
.specify/memory/: constitution.md
backend/: .gitignore  .vercelignore  CLAUDE.md  Dockerfile  index.py  pyproject.toml  pyproject.toml.local  requirements.txt  server_log.txt  vercel.json
backend/migrations/: 001_initial_schema.sql
backend/src/: __init__.py  config.py  db.py  main.py
backend/src/agent/: __init__.py  todo_agent.py
backend/src/api/: __init__.py  auth.py  chat.py  deps.py  tasks.py
backend/src/mcp/: __init__.py  server.py
backend/src/mcp/tools/: __init__.py  add_task.py  complete_task.py  delete_task.py  list_tasks.py  update_task.py
backend/src/models/: __init__.py  conversation.py  message.py  task.py
backend/src/services/: __init__.py  chat_service.py  conversation_service.py  task_service.py
frontend/: CLAUDE.md  Dockerfile  next.config.js  package-lock.json  package.json  tailwind.config.js
frontend/src/app/: layout.tsx  page.tsx
frontend/src/lib/: api.ts  auth.ts  (+2 more)
specs/001-ai-chatbot-frontend/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
(+19 files in other folders)
